--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,61 +8,110 @@
     tools:context=".MainActivity">
 
     <!-- Score -->
-    <TextView
-        android:id="@+id/tvScore"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/llScore"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your Score 0/5      Computer Score 0/5"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/tvPlayerScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Your Score 0/5"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvComputerScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Computer Score 0/5"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 
     <!-- Round Result -->
     <TextView
         android:id="@+id/tvResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="128dp"
         android:text="Click a button to start!"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/tvScore"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/llScore" />
 
     <!-- Player Move Image -->
     <ImageView
         android:id="@+id/ivPlayer"
         android:layout_width="140dp"
         android:layout_height="140dp"
-        android:visibility="invisible"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/tvResult"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvResult" />
+
+    <TextView
+        android:id="@+id/tvYourMoveLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Your Move"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/ivPlayer"
+        app:layout_constraintStart_toStartOf="@id/ivPlayer"
+        app:layout_constraintTop_toBottomOf="@id/ivPlayer" />
 
     <!-- Computer Move Image -->
     <ImageView
         android:id="@+id/ivComputer"
         android:layout_width="140dp"
         android:layout_height="140dp"
-        android:visibility="invisible"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/tvResult"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvResult" />
+
+    <TextView
+        android:id="@+id/tvComputerMoveLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Computer Move"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/ivComputer"
+        app:layout_constraintStart_toStartOf="@id/ivComputer"
+        app:layout_constraintTop_toBottomOf="@id/ivComputer" />
 
     <!-- ROCK -->
     <Button
         android:id="@+id/btRock"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="10dp"
         android:text="ROCK"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@id/ivPlayer"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/btPaper"
-        android:layout_marginEnd="10dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvYourMoveLabel" />
 
     <!-- PAPER -->
 
@@ -93,7 +141,7 @@
         app:layout_constraintTop_toTopOf="@+id/btPaper" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fBtRestart"
+        android:id="@+id/fbRestart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
